fix mobile overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
-body {
+html, body {
     font-family: "Poppins", sans-serif;
-    overflow-x:hidden;
+    overflow-x: hidden;
+    max-width: 100%;
 }
 .hero {
     background-color: #0a1628;
